--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 = Courier
 
+{<img src="http://travis-ci.org/dapi/courier.png" />}[http://travis-ci.org/dapi/courier]
+
 Давным давно, в одной далекой-предалекой галактике, был такой модем USR Courier,
 он хорошо держал карриер и был мечтой каждого фидошника. А сейчас чтобы получать
 много не нужных писем достаточно зарегистрироваться на еще одной социальной
